--- a/res/layout/activity_formulario.xml
+++ b/res/layout/activity_formulario.xml
@@ -8,4 +8,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".FormularioActivity" >
 
+    <fragment
+        android:id="@+id/formulario_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        class="com.recorridaszo.recorridaszo.FormularioFragment" />
+
 </RelativeLayout>
