--- a/res/layout/activity_ver_persona.xml
+++ b/res/layout/activity_ver_persona.xml
@@ -9,8 +9,19 @@
     tools:context=".VerPersona" >
 
     <TextView
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
+
+    <Button
+        android:id="@+id/buttonEditar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_below="@+id/textView1"
+        android:layout_marginTop="98dp"
+        android:onClick="onClickEditar"
+        android:text="@string/editar" />
 
 </RelativeLayout>
