--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,4 +8,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
+    <Button
+        android:id="@+id/buttonMapa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:onClick="onBotonMapaClick"
+        android:text="@string/mapa" />
+
 </RelativeLayout>
