--- a/res/layout/activity_ver_persona.xml
+++ b/res/layout/activity_ver_persona.xml
@@ -22,19 +22,44 @@
                 android:id="@+id/labelNombre"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/labelNombre" />
+                android:text="@string/labelNombre"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
                 android:id="@+id/textViewNombre"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/sinDato" />
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:text="@string/sinDato"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/labelApellido"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"                
+                android:text="@string/labelApellido"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <TextView
+                android:id="@+id/textViewApellido"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:text="@string/sinDato"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingTop="@dimen/activity_vertical_margin" >
 
             <Button
                 android:id="@+id/buttonEditar"
@@ -47,7 +72,10 @@
                 android:id="@+id/buttonEliminar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center_vertical|center_horizontal"
+                android:onClick="onClickEliminar"
                 android:text="@string/eliminar" />
+
         </LinearLayout>
     </LinearLayout>
 
