--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -27,4 +27,14 @@
         android:onClick="onBotonActualizarClick"
         android:text="Actualizacion" />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button1"
+        android:layout_alignRight="@+id/buttonMapa"
+        android:layout_marginBottom="24dp"
+        android:onClick="onBotonBorrarClick"
+        android:text="Borrar" />
+
 </RelativeLayout>
