Insertar persona a DBWeb

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -37,4 +37,14 @@
         android:onClick="onBotonBorrarClick"
         android:text="Borrar" />
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/buttonMapa"
+        android:layout_below="@+id/buttonMapa"
+        android:layout_marginTop="31dp"
+        android:onClick="onBotonInsertarClick"
+        android:text="Insertar" />
+
 </RelativeLayout>
