--- a/res/layout/activity_mapa.xml
+++ b/res/layout/activity_mapa.xml
@@ -18,7 +18,7 @@
             android:text="@string/button_guardar" />
 
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/eTZona"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
