--- a/res/layout/formulario_fragment.xml
+++ b/res/layout/formulario_fragment.xml
@@ -43,7 +43,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/zona" >
+            android:hint="@string/zona"
+            android:inputType="textCapWords" >
 
             <requestFocus />
         </EditText>
@@ -54,7 +55,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/descripcion"
-            android:inputType="text" />
+            android:inputType="text|textCapSentences" />
 
         <Button
             android:id="@+id/buttonOk"
