--- a/res/layout/activity_ver_persona.xml
+++ b/res/layout/activity_ver_persona.xml
@@ -1,5 +1,6 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/fondosi"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
