--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -13,8 +13,9 @@
         android:id="@+id/buttonMapa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="40dp"
         android:onClick="onBotonMapaClick"
         android:text="@string/mapa" />
 
