--- a/res/layout/activity_ver_persona.xml
+++ b/res/layout/activity_ver_persona.xml
@@ -24,6 +24,7 @@
                 android:id="@+id/labelNombre"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingLeft="3dp"
                 android:text="@string/labelNombre"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@android:color/black" />
@@ -32,7 +33,7 @@
                 android:id="@+id/textViewNombre"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingLeft="3dp"
                 android:text="@string/sinDato"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@android:color/black" />
@@ -49,6 +50,7 @@
                 android:id="@+id/labelApellido"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingLeft="3dp"
                 android:text="@string/labelApellido"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@android:color/black" />
@@ -57,7 +59,7 @@
                 android:id="@+id/textViewApellido"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingLeft="3dp"
                 android:text="@string/sinDato"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@android:color/black" />
@@ -74,6 +76,7 @@
                 android:id="@+id/labelDireccion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingLeft="3dp"
                 android:text="@string/labelDireccion"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@android:color/black" />
@@ -82,7 +85,7 @@
                 android:id="@+id/textViewDireccion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingLeft="3dp"
                 android:text="@string/sinDato"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@android:color/black" />
@@ -93,7 +96,8 @@
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/white"
-             android:orientation="horizontal" >
+             android:orientation="horizontal"
+             android:paddingLeft="3dp" >
 
             <TextView
                 android:id="@+id/labelZona"
@@ -107,7 +111,7 @@
                 android:id="@+id/textViewZona"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingLeft="3dp"
                 android:text="@string/sinDato"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@android:color/black" />
@@ -124,6 +128,7 @@
                 android:id="@+id/labelDescripcion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingLeft="3dp"
                 android:text="@string/labelDescripcion"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@android:color/black" />
@@ -132,7 +137,7 @@
                 android:id="@+id/textViewDescripcion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingLeft="3dp"
                 android:text="@string/sinDato"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@android:color/black" />
