--- a/res/layout/activity_mapa.xml
+++ b/res/layout/activity_mapa.xml
@@ -3,18 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_margin="0dp"
     tools:context=".MapaActivity" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="0dp"
         android:orientation="horizontal" >
 
         <EditText
             android:id="@+id/eTZona"
             android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:layout_weight="5"
             android:ems="10"
             android:hint="@string/direccion"
             android:inputType="textPostalAddress" >
@@ -25,21 +27,32 @@
         <Button
             android:id="@+id/buttonBuscar"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"          
             android:onClick="onBotonBuscarClick"
-            android:text="@string/button_buscar" />
+            android:layout_margin="0dp"
+            android:drawableRight="@drawable/ic_btn_search" />
+        
+        <Button
+            android:id="@+id/buttonCentrar"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:onClick="onBotonCentrarClick"
+            android:layout_margin="0dp"
+            android:drawableRight="@drawable/ic_menu_mylocation" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="0dp"
         android:orientation="vertical" >
 
         <fragment
             android:id="@+id/map"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="0dp"
             class="com.google.android.gms.maps.SupportMapFragment" />
 
     </LinearLayout>
